[tool.poetry]
name = "ahc009"
version = "0.1.0"
description = ""
authors = ["takizawa <kei.cataract@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pre-commit = "^2.17.0"
tqdm = "^4.63.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
